tests/invalid/raise_unsupported_exception_name/main.py
def main() -> None:
    raise FooError
